--- a/components/icons&Buttons/show-more.module.css
+++ b/components/icons&Buttons/show-more.module.css
@@ -1,25 +1,33 @@
-.ShowMore {
+.btn {
+    font: inherit;
+    cursor: pointer;
+}
+
+.btn {
     --hover-shadows: 16px 16px 33px #121212, -16px -16px 33px #303030;
     font-weight: bold;
     letter-spacing: 0.1em;
-    border-style: solid;
+    border: none;
     border-radius: 1.1em;
-    border-color: #121212;
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
+    border: solid;
+    background-color: white;
+    color: rgb(84, 81, 81);
     padding: 1em 2em;
     transition: box-shadow ease-in-out 0.3s, background-color ease-in-out 0.1s,
         letter-spacing ease-in-out 0.1s, transform ease-in-out 0.1s;
-    box-shadow: 5px 5px 8px #564E4E;
+    box-shadow: 5px 5px 8px #C9C3C3;
     justify-content: center;
     align-items: center;
     font-size: 12px;
-    cursor: pointer;
+    padding: 5px 8px;
 }
-.ShowMore:hover {
+
+.btn:hover {
     box-shadow: var(--hover-shadows);
+    border: none;
 }
-.ShowMore:active {
+
+.btn:active {
     box-shadow: var(--hover-shadows), var(--accent) 0px 0px 30px 5px;
     transform: scale(0.95);
 }
