--- a/components/layout/main-nav.module.css
+++ b/components/layout/main-nav.module.css
@@ -2,14 +2,14 @@
     position: sticky;
     top: 0;
     width: 100%;
-    height: 6rem;
+    height: 4.5rem;
     background-color: rgba(2, 111, 2, 0.767); /* Set the background color to green */
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0;
     z-index: 100;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 5px 5px 10px rgba(0, 0, 4, 0.714);
   }
   
   .header ul {
@@ -30,15 +30,15 @@
   
   .header a {
     color: white; /* Set the font color to white */
-    font-size: var(--size-4);
+    font-size: var(--size-5);
     text-decoration: none; /* Remove underline */
   }
   
   .header a:hover,
   .header a:active,
   .header a.active {
-    color: var(--color-grey-200);
-    text-decoration: underline; /* Add underline on hover */
+    color: var(--color-primary-700);
+    font-weight: bold;
   }
   
   @media (max-width: 767px) {
