--- a/components/recipes/recipe-list.module.css
+++ b/components/recipes/recipe-list.module.css
@@ -6,9 +6,10 @@
 }
 
 .title {
-    font-size: 24px;
+    font-size: 27px;
     color: #333;
     margin-bottom: 20px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .cardContainer {
@@ -20,10 +21,14 @@
 .card {
     border: 1px solid #ccc;
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+    box-shadow: 2px 2px 2px rgba(168, 245, 213, 0.6);
     background-color: whitesmoke;
-    width: 300px;
+    width: 340px;
     padding: 10px;
+}
+
+.card:hover {
+    transform: scale(1.02);
 }
 
 .cardImageContainer {
