--- a/styles/globals.css
+++ b/styles/globals.css
@@ -85,5 +85,58 @@
             transform: scale(0.95);
         }
 
+        .textarea {
+            background-color: rgb(255, 255, 255);
+            width: 100%;
+            height: 150px;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            resize: vertical; /* Allow vertical resizing */
+            font-family: 'Arial', sans-serif; /* Change the font as needed */
+        }
 
-        
+        .carouselWrapper{
+            width: 100%; /* Adjust the width as needed */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+           
+            
+
+            
+            
+        }
+        .carouselItem {
+            /* Customize the styling for each carousel item */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 300px; /* Adjust the height as needed */
+            
+        }
+          
+        .carousel-item img {
+            max-width: 100%; /* Ensure the image is responsive */
+            max-height: 100%; /* Ensure the image is responsive */
+        }
+          
+        .button {
+            /* Customize the styling for carousel navigation buttons */
+            background-color: #864949; /* Set the background color */
+            border: none;
+            color: rgb(78, 42, 42);
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+        }
+        .carousel-arrow{
+            background-color: #ffffff;
+            color: #12bd4b;
+            border: #12bd4b;
+        }
