--- a/components/layout/main-nav.module.css
+++ b/components/layout/main-nav.module.css
@@ -3,7 +3,7 @@
     top: 0;
     width: 100%;
     height: 5.5rem;
-    background-color: rgba(2, 111, 2, 0.767); /* Set the background color to green */
+    background-color: rgba(2, 111, 2, 0.767); 
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -11,8 +11,6 @@
     z-index: 100;
     box-shadow: 5px 5px 10px rgba(0, 0, 4, 0.714);
   }
-
- 
   
   .header ul {
     list-style: none;
@@ -23,28 +21,20 @@
   }
   
   .header .icon {
-    color: white; /* Change the icon color to white */
-    padding: 2px;
+    color: white; 
+    padding: 10px;
     padding-top: 5px;
     font-weight: bold;
   }
   
-  .header .logo{
-    position: relative;
-    bottom:20px;
-    right:100px;
-      }
-
   .header li {
     margin: 0 var(--size-4);
-    position: relative;
-    left:100px;
   }
   
   .header a {
-    color: white; /* Set the font color to white */
+    color: white; 
     font-size: var(--size-5);
-    text-decoration: none; /* Remove underline */
+    text-decoration: none;
   }
   
   .header a:hover,
@@ -56,7 +46,7 @@
   
   @media (max-width: 767px) {
     .header {
-      background-color: green; /* Set the background color to green */
+      background-color: green; 
       z-index: 100;
     }
   
@@ -66,7 +56,7 @@
       position: absolute;
       top: 6rem;
       left: 0;
-      background-color: green; /* Set the overlay background color to green */
+      background-color: green; 
       width: 100%;
     }
   
