highlighting matching words

--- a/components/recipes/recipe-list.module.css
+++ b/components/recipes/recipe-list.module.css
@@ -6,7 +6,7 @@
 }
 
 .title {
-    font-size: 27px;
+    font-size: bold;
     color: #333;
     margin-bottom: 20px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
