--- a/pages/recipe/RecipeDetailPage.module.css
+++ b/pages/recipe/RecipeDetailPage.module.css
@@ -60,7 +60,7 @@
   justify-content: space-around;
   align-items: flex-start;
   flex-grow: 1;
-  
+
 }
 
 .errorMessage {
@@ -68,3 +68,68 @@
   font-weight: bold;
 }
 
+/* Styles for Carousel */
+
+.carousel {
+  position: relative;
+  width: 100%;
+  max-width: 600px;
+  margin: auto;
+  overflow: hidden;
+  
+}
+
+.slides {
+  display: flex;
+}
+
+.slide {
+  min-width: 100%;
+}
+
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Pagination Styles */
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.dot {
+  height: 10px;
+  width: 10px;
+  margin: 0 5px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.3s ease;
+  cursor: pointer;
+}
+
+.active {
+  background-color: #717171;
+}
