--- a/components/icons&Buttons/add-to-favorite-btn.module.css
+++ b/components/icons&Buttons/add-to-favorite-btn.module.css
@@ -1,29 +1,31 @@
 .favoriteButton {
-    background: none;
-    position: relative;
-    left:90%;
-    bottom:25px;
-    border: none;
-    padding: 4px 6px; 
-    cursor: pointer; 
-    transition: background-color 0.3s;
-    
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 24px; 
+  transition: transform 0.2s ease-in-out;
+}
+
+.favoriteEmpty {
+  color: green;
+}
+
+.favoriteFilled {
+  color: red;
+}
+
+.pulse {
+  animation: pulse 1s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
   }
-  
-  .pulse {
-    animation: pulse 1s infinite;
+  50% {
+    transform: scale(1.1);
   }
-  
-  @keyframes pulse {
-    0% {
-      transform: scale(1);
-    }
-    50% {
-      transform: scale(1.1);
-    }
-    100% {
-      transform: scale(1);
-    }
+  100% {
+    transform: scale(1);
   }
-  
-  
+}
