--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,43 +2,8 @@
         margin: auto;
     }
 
-    body {
-        --color-grey-50: hsl(265, 55%, 96%);
-        --color-grey-100: hsl(265, 19%, 88%);
-        --color-grey-200: hsl(265, 7%, 70%);
-        --color-grey-300: hsl(265, 6%, 66%);
-        --color-grey-900: hsl(280, 5%, 13%);
-
-        --color-primary-50: #c8b3ce;
-        --color-primary-100: #a07aaa;
-        --color-primary-200: #884c97;
-        --color-primary-300: #843897;
-        --color-primary-400: #732392;
-        --color-primary-500: #5a097a;
-        --color-primary-600: #480264;
-        --color-primary-700: #06f776b9;
-
-        --color-success-100: #a2f0bc;
-        --color-success-500: #12bd4b;
-
-        --color-error-100: #f1acc9;
-        --color-error-500: #a10c4a;
-
-        --size-1: 0.25rem;
-        --size-2: 0.5rem;
-        --size-3: 0.75rem;
-        --size-4: 1rem;
-        --size-5: 1.25rem;
-        --size-6: 1.5rem;
-        --size-8: 2rem;
-        --size-16: 4rem;
-        --size-20: 5rem;
-        --size-40: 10rem;
-
-      
-        background-color: var(--color-grey-500);
-        color: #d9f5da;
-        font-family: 'Roboto', sans-serif;
+    .body {
+        background-color: #12bd4b;
     }
 
     h1,
@@ -101,20 +66,15 @@
             width: 100%; /* Adjust the width as needed */
             display: flex;
             justify-content: center;
-            align-items: center;
-           
-            
-
-            
-            
+            align-items: center;   
         }
+
         .carouselItem {
             /* Customize the styling for each carousel item */
             display: flex;
             justify-content: center;
             align-items: center;
             height: 300px; /* Adjust the height as needed */
-            
         }
           
         .carousel-item img {
