still to add more

--- a/pages/recipe/RecipeDetailPage.module.css
+++ b/pages/recipe/RecipeDetailPage.module.css
@@ -22,7 +22,7 @@
   padding: 10px;
   padding-left: 50px;
   margin-top: 10px;
-  align-items: center;
+  text-align: center;
   height: 130vh;
 }
 
