--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,17 +68,12 @@ body {
         text-decoration: none;
     }
 
-    .title{
-        position: relative;
-        top: 190px;
-    }
-  
     .btn {
-        position: relative;
-       bottom: 180px;
         font: inherit;
         cursor: pointer;
-        --hover-shadows: 16px 16px 33px #121212, -16px -16px 33px #303030;
+    }
+
+    .btn {
         font-weight: bold;
         letter-spacing: 0.1em;
         border: none;
@@ -92,7 +87,6 @@ body {
         align-items: center;
         font-size: 12px;
         padding: 5px 8px;
-        
         }
     
         .btn:hover {
