--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,149 +1,149 @@
 * {
-    box-sizing: border-box;
+  margin: auto;
 }
 
 body {
-    --color-grey-50: hsl(265, 55%, 96%);
-    --color-grey-100: hsl(265, 19%, 88%);
-    --color-grey-200: hsl(265, 7%, 70%);
-    --color-grey-300: hsl(265, 6%, 66%);
-    --color-grey-900: hsl(280, 5%, 13%);
+  --color-grey-50: hsl(265, 55%, 96%);
+  --color-grey-100: hsl(265, 19%, 88%);
+  --color-grey-200: hsl(265, 7%, 70%);
+  --color-grey-300: hsl(265, 6%, 66%);
+  --color-grey-900: hsl(280, 5%, 13%);
 
-    --color-primary-50: #c8b3ce;
-    --color-primary-100: #a07aaa;
-    --color-primary-200: #884c97;
-    --color-primary-300: #843897;
-    --color-primary-400: #732392;
-    --color-primary-500: #5a097a;
-    --color-primary-600: #480264;
-    --color-primary-700: #06f776b9;
+  --color-primary-50: #c8b3ce;
+  --color-primary-100: #a07aaa;
+  --color-primary-200: #884c97;
+  --color-primary-300: #843897;
+  --color-primary-400: #732392;
+  --color-primary-500: #5a097a;
+  --color-primary-600: #480264;
+  --color-primary-700: #06f776b9;
 
-    --color-success-100: #a2f0bc;
-    --color-success-500: #12bd4b;
+  --color-success-100: #a2f0bc;
+  --color-success-500: #12bd4b;
 
-    --color-error-100: #f1acc9;
-    --color-error-500: #a10c4a;
+  --color-error-100: #f1acc9;
+  --color-error-500: #a10c4a;
 
-    --size-1: 0.25rem;
-    --size-2: 0.5rem;
-    --size-3: 0.75rem;
-    --size-4: 1rem;
-    --size-5: 1.25rem;
-    --size-6: 1.5rem;
-    --size-8: 2rem;
-    --size-16: 4rem;
-    --size-20: 5rem;
-    --size-40: 10rem;
+  --size-1: 0.25rem;
+  --size-2: 0.5rem;
+  --size-3: 0.75rem;
+  --size-4: 1rem;
+  --size-5: 1.25rem;
+  --size-6: 1.5rem;
+  --size-8: 2rem;
+  --size-16: 4rem;
+  --size-20: 5rem;
+  --size-40: 10rem;
 
-    margin: auto;
-    background-color: var(--color-grey-500);
-    color: #081109;
-    font-family: 'Roboto', sans-serif;
+  margin: auto;
+  background-color: var(--color-grey-500);
+  color: #081109;
+  font-family: 'Roboto', sans-serif;
 }
 
-    h1,
-    h2,
-    h3 {
-        font-family: 'Oswald', 'Roboto', sans-serif;
-    }
+h1,
+h2,
+h3 {
+  font-family: 'Oswald', 'Roboto', sans-serif;
+}
 
-    .landingContent {
-        padding-left: 50vw;
-        text-align: center;
-        color:rgb(3, 143, 3);
-        padding-right: 2vw;
-        padding-bottom: 12vw;
-        font: 1.3em Roboto;
-        font-weight: bold;
-    }
+.landingContent {
+  padding-left: 50vw;
+  text-align: center;
+  color: rgb(3, 143, 3);
+  padding-right: 2vw;
+  padding-bottom: 12vw;
+  font: 1.3em Roboto;
+  font-weight: bold;
+}
 
-    .landingTitle{
-        color: rgb(167, 78, 5);
-        font: 5em Oswald;
-        padding-left: 50vw;
-        font-weight: bolder;
-    }
+.landingTitle {
+  color: rgb(167, 78, 5);
+  font: 5em Oswald;
+  padding-left: 50vw;
+  font-weight: bolder;
+}
 
-    a {
-        text-decoration: none;
-    }
+a {
+  text-decoration: none;
+}
 
-    .btn {
-        font: inherit;
-        cursor: pointer;
-    }
+.btn {
+  font: inherit;
+  cursor: pointer;
+}
 
-    .btn {
-        font-weight: bold;
-        letter-spacing: 0.1em;
-        border: none;
-        border-radius: 1.1em;
-        border: solid;
-        background-color: white;
-        color: rgb(84, 81, 81);
-        padding: 1em 2em;
-        box-shadow: 5px 5px 8px #C9C3C3, 0.8;
-        justify-content: center;
-        align-items: center;
-        font-size: 12px;
-        padding: 5px 8px;
-        }
-    
-        .btn:hover {
-            border: none;
-            background-color:rgb(94, 236, 141);
-            color:#05812e;
-        }
-    
-        .btn:active {
-            transform: scale(0.95);
-        }
+.btn {
+  font-weight: bold;
+  letter-spacing: 0.1em;
+  border: none;
+  border-radius: 1.1em;
+  border: solid;
+  background-color: white;
+  color: rgb(84, 81, 81);
+  padding: 1em 2em;
+  box-shadow: 5px 5px 8px #c9c3c3, 0.8;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
+  padding: 5px 8px;
+}
 
-        .textarea {
-            background-color: rgb(255, 255, 255);
-            width: 100%;
-            height: 150px;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            resize: vertical; 
-            font-family: 'Arial', sans-serif;
-        }
+.btn:hover {
+  border: none;
+  background-color: rgb(94, 236, 141);
+  color: #05812e;
+}
 
-        .carouselWrapper{
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;   
-        }
+.btn:active {
+  transform: scale(0.95);
+}
 
-        .carouselItem {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 300px;
-        }
-          
-        .carousel-item img {
-            max-width: 100%; 
-            max-height: 100%;
-        }
-          
-        .button {
-            background-color: #864949;
-            border: none;
-            color: rgb(78, 42, 42);
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
-        }
-        .carousel-arrow{
-            background-color: #ffffff;
-            color: #12bd4b;
-            border: #12bd4b;
-        }
+.textarea {
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  height: 150px;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  resize: vertical;
+  font-family: 'Arial', sans-serif;
+}
+
+.carouselWrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.carouselItem {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+}
+
+.carousel-item img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.button {
+  background-color: #864949;
+  border: none;
+  color: rgb(78, 42, 42);
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+.carousel-arrow {
+  background-color: #ffffff;
+  color: #12bd4b;
+  border: #12bd4b;
+}
