--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
   margin: auto;
 }
@@ -38,13 +40,13 @@ body {
   margin: auto;
   background-color: var(--color-grey-500);
   color: #081109;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Poppins';
 }
 
 h1,
 h2,
 h3 {
-  font-family: 'Oswald', 'Roboto', sans-serif;
+  font-family: 'Poppins';
 }
 
 .landingContent {
@@ -59,9 +61,10 @@ h3 {
 
 .landingTitle {
   color: rgb(167, 78, 5);
-  font: 5em Oswald;
+  font: 4.1em Oswald;
   padding-left: 50vw;
   font-weight: bolder;
+  font-family: 'Poppins';
 }
 
 a {
@@ -90,9 +93,11 @@ a {
 }
 
 .btn:hover {
-  border: none;
-  background-color: rgb(94, 236, 141);
-  color: #05812e;
+  /* border: none; */
+  background-color: rgba(2, 111, 2, 0.767);
+  color: white;
+  border-color: rgb(84, 81, 81);;
+  
 }
 
 .btn:active {
@@ -108,7 +113,7 @@ a {
   border: 1px solid #ccc;
   border-radius: 5px;
   resize: vertical;
-  font-family: 'Arial', sans-serif;
+  font-family: 'Poppins';
 }
 
 .carouselWrapper {
@@ -146,4 +151,11 @@ a {
   background-color: #ffffff;
   color: #12bd4b;
   border: #12bd4b;
+}
+
+.subtitle {
+  font-family: 'Poppins';
+  font-size: 0.7em;
+  font-style: italic;
+  padding: 10px 0 20px 0;
 }
