--- a/components/search/Search.module.css
+++ b/components/search/Search.module.css
@@ -1,6 +1,7 @@
 .input {
   color: rgb(255, 255, 255);
   font: 1em/1.5 Hind, sans-serif;
+  transition: all 0.5s ease; 
 }
 .form,
 .input,
@@ -11,7 +12,7 @@
 .form {
   position: relative;
   width: 100%;
-  max-width: 17em;
+  max-width: 8em;
 }
 
 .input,
@@ -25,8 +26,8 @@
   border-radius: 50%;
   box-shadow: 0 0 0 0.25em inset;
   caret-color: #255ff4;
-  width: 2em;
-  height: 2em;
+  width: 1.6em;
+  height: 1.6em;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -39,11 +40,11 @@
   color: black;
   font-family: sans-serif;
   border-radius: 50px;
-  padding: 0.75em 1em;
+  padding: 0.5em 1em;
   transition-duration: calc(1s * 0.25);
   transition-delay: calc(1s * 0.25);
-  width: 400px;
-  height: 2.5em;
+  width: 200px;
+  height: 1em;
 }
 .input:focus {
   animation: showCaret 1s steps(1);
@@ -77,7 +78,32 @@
   transform-origin: 50% 0;
 }
 
-/* Add or modify these styles in your CSS file */
+
+
+.clearButton,
+.form button {
+  background: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  color: rgb(0, 0, 0);
+  font-size: 0.8em;
+  transition: color 0.3s ease;
+}
+
+.clearButton:hover,
+.form button:hover {
+  color:  rgb(44, 206, 44);
+}
+
+.clearButton {
+  padding: 0.5em;
+}
+
+.form button {
+  padding: 0.5em 1em;
+}
+
 
 .whole {
   position: relative; 
@@ -107,7 +133,6 @@
   color: black;
 }
 
-/* Additional styling for better appearance */
 .whole ul {
   max-height: 150px; 
   overflow-y: auto; 
