--- a/components/hero/hero.module.css
+++ b/components/hero/hero.module.css
@@ -3,14 +3,14 @@
     overflow: hidden;
   }
   
-  .blurBackground {
+  /* .blurBackground {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background: url('/hero.jpg') center/cover no-repeat;
-    filter: blur(5px); /* Adjust the blur amount as needed */
+    filter: blur(5px); /* Adjust the blur amount as needed *
     z-index: -1;
-  }
+  } */
   
