--- a/styles/globals.css
+++ b/styles/globals.css
@@ -159,8 +159,24 @@ a {
 }
 
 .subtitle {
-  font-family: 'Poppins';
+  font-fanmily: 'Poppins';
   font-size: 0.7em;
   font-style: italic;
   padding: 10px 0 20px 0;
+}
+
+.loading-spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-top: 4px solid #333;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+  margin: 20px auto; /* Adjust margin as needed */
+  margin-top: 250px;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
