--- a/components/layout/main-nav.module.css
+++ b/components/layout/main-nav.module.css
@@ -132,7 +132,7 @@
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: 20px;
     right: 0;
-    top: 70px; /* Adjust the top position to avoid overlap with the burger menu */
+    top: 70px; 
   }
 
   .menu select {
@@ -151,4 +151,41 @@
   .burgerMenuOpen .menu {
     display: block;
   }
+}
+
+  .favoritesCount {
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 2px 6px;
+  font-size: 12px;
+  position: absolute;
+  top: -5px;
+  right: -5px;
+}
+  .ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+
+.li {
+  margin-right: 20px;
+}
+
+.icon a {
+  text-decoration: none;
+  color: #333; 
+  display: flex;
+  align-items: center;
+}
+
+.icon div {
+  position: relative;
+}
+.FavIcon{
+  position: relative;
+  top: 30px;
 }
