--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@
 
 body {
     margin: auto;
-  background-color: var(--color-grey-500);
+  background-color: whitesmoke;
   color: #081109;
   font-family: 'Poppins';
 }
