--- a/components/Loading/Loading.module.css
+++ b/components/Loading/Loading.module.css
@@ -7,7 +7,7 @@
   }
   
   .loader {
-    border: 4px solid rgba(162, 242, 155, 0.3);
+    border: 4px solid rgb(162, 242, 155);
     border-top: 4px solid #00f308;
     border-radius: 50%;
     width: 40px;
