--- a/styles/globals.css
+++ b/styles/globals.css
@@ -135,12 +135,12 @@ a {
 
 .loading-spinner {
   border: 4px solid rgba(0, 0, 0, 0.1);
-  border-top: 4px solid #333;
+  border-top: 4px solid #04b64e;
   border-radius: 50%;
   width: 50px;
   height: 50px;
   animation: spin 1s linear infinite;
-  margin: 20px auto; /* Adjust margin as needed */
+  margin: 20px auto;
   margin-top: 250px;
 }
 
@@ -151,7 +151,7 @@ a {
 
 @media only screen and (max-width: 768px) {
   .landingTitle {
-    padding-left: 2vw;
+    padding-left: 1.5vw;
   }
   
   .btn {
